<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:clickable="true"
    android:focusableInTouchMode="true"
    tools:context=".ReagistrationActivity"
    android:focusable="true">

    <androidx.appcompat.widget.Toolbar
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/colorPrimary">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center_vertical"
            android:orientation="horizontal"
            tools:ignore="UseCompoundDrawables">

            <ImageView
                android:id="@+id/image_back"
                android:layout_width="32dp"
                android:layout_height="32dp"
                android:layout_margin="5dp"
                android:src="@drawable/ic_arrow_back_black_48dp"
                android:tint="@color/colorWhite"
                tools:ignore="ContentDescription" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/registration"
                android:textColor="@color/colorWhite"
                android:textSize="22sp"
                android:textStyle="bold" />

        </LinearLayout>

    </androidx.appcompat.widget.Toolbar>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:paddingBottom="20dp">

            <androidx.cardview.widget.CardView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="20dp"
                android:outlineSpotShadowColor="@color/cardview_dark_background"
                app:cardCornerRadius="6dp"
                app:cardElevation="6dp"
                app:cardUseCompatPadding="true"
                tools:ignore="PrivateResource,UnusedAttribute">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical">

                    <com.google.android.material.textfield.TextInputLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content">

                        <com.google.android.material.textfield.TextInputEditText
                            android:id="@+id/input_first_name"
                            android:layout_width="match_parent"
                            android:layout_height="40dp"
                            android:layout_margin="10dp"
                            android:background="@null"
                            android:hint="@string/first_name"
                            android:imeOptions="actionNext"
                            android:inputType="text"
                            android:textSize="18sp" />

                    </com.google.android.material.textfield.TextInputLayout>
                    <!--
                                        <EditText
                                            android:id="@+id/input_first_name"
                                            android:layout_width="match_parent"
                                            android:layout_height="40dp"
                                            android:layout_margin="10dp"
                                            android:background="@null"
                                            android:hint="@string/first_name"
                                            android:imeOptions="actionNext"
                                            android:inputType="text"
                                            android:textSize="18sp" />
                    -->

                    <View
                        android:layout_width="match_parent"
                        android:layout_height="1dp"
                        android:background="#BDBDBD" />

                    <com.google.android.material.textfield.TextInputLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content">

                        <com.google.android.material.textfield.TextInputEditText
                            android:id="@+id/input_last_name"
                            android:layout_width="match_parent"
                            android:layout_height="40dp"
                            android:layout_margin="10dp"
                            android:background="@null"
                            android:hint="@string/last_name"
                            android:imeOptions="actionNext"
                            android:inputType="text"
                            android:textSize="18sp" />
                    </com.google.android.material.textfield.TextInputLayout>


                    <View
                        android:layout_width="match_parent"
                        android:layout_height="1dp"
                        android:background="#BDBDBD" />

                    <RadioGroup
                        android:id="@+id/radio_gender_group"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_margin="10dp"
                        android:gravity="center_vertical"
                        android:orientation="horizontal">

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/gender"
                            android:textSize="18sp" />

                        <RadioButton
                            android:id="@+id/radio_male"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginLeft="5dp"
                            android:buttonTint="@color/colorPrimaryDark"
                            android:layout_marginRight="5dp"
                            android:text="@string/male" />

                        <RadioButton
                            android:id="@+id/radio_female"
                            android:buttonTint="@color/colorPrimaryDark"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginLeft="5dp"
                            android:layout_marginRight="5dp"
                            android:text="@string/female" />

                    </RadioGroup>

                    <View
                        android:layout_width="match_parent"
                        android:layout_height="1dp"
                        android:background="#BDBDBD" />

                    <com.google.android.material.textfield.TextInputLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content">

                        <com.google.android.material.textfield.TextInputEditText
                            android:id="@+id/input_mobile"
                            android:layout_width="match_parent"
                            android:layout_height="40dp"
                            android:layout_margin="10dp"
                            android:background="@null"
                            android:hint="@string/mobile"
                            android:imeOptions="actionNext"
                            android:inputType="number"
                            android:maxLength="10"
                            android:textSize="18sp" />

                    </com.google.android.material.textfield.TextInputLayout>

                    <View
                        android:layout_width="match_parent"
                        android:layout_height="1dp"
                        android:background="#BDBDBD" />

                    <Spinner
                        android:id="@+id/country_spinner"
                        android:layout_width="match_parent"
                        android:layout_height="40dp"
                        android:layout_margin="10dp" />

                    <View
                        android:layout_width="match_parent"
                        android:layout_height="1dp"
                        android:background="#BDBDBD" />

                    <Spinner
                        android:id="@+id/state_spinner"
                        android:layout_width="match_parent"
                        android:layout_height="40dp"
                        android:layout_margin="10dp" />

                    <View
                        android:layout_width="match_parent"
                        android:layout_height="1dp"
                        android:background="#BDBDBD" />

                    <Spinner
                        android:id="@+id/city_spinner"
                        android:layout_width="match_parent"
                        android:layout_height="40dp"
                        android:layout_margin="10dp" />

                    <View
                        android:layout_width="match_parent"
                        android:layout_height="1dp"
                        android:background="#BDBDBD" />

                    <com.google.android.material.textfield.TextInputLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content">

                        <com.google.android.material.textfield.TextInputEditText
                            android:id="@+id/input_email"
                            android:layout_width="match_parent"
                            android:layout_height="40dp"
                            android:layout_margin="10dp"
                            android:background="@null"
                            android:hint="@string/email"
                            android:imeOptions="actionNext"
                            android:inputType="textEmailAddress"
                            android:textSize="18sp" />
                    </com.google.android.material.textfield.TextInputLayout>


                    <View
                        android:layout_width="match_parent"
                        android:layout_height="1dp"
                        android:background="#BDBDBD" />

                    <com.google.android.material.textfield.TextInputLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        app:passwordToggleEnabled="true">

                        <com.google.android.material.textfield.TextInputEditText
                            android:id="@+id/input_password"
                            android:layout_width="match_parent"
                            android:layout_height="40dp"
                            android:layout_margin="10dp"
                            android:background="@null"
                            android:hint="@string/password"
                            android:imeOptions="actionNext"
                            android:inputType="textPassword"
                            android:textSize="18sp" />

                    </com.google.android.material.textfield.TextInputLayout>


                    <View
                        android:layout_width="match_parent"
                        android:layout_height="1dp"
                        android:background="#BDBDBD" />

                    <com.google.android.material.textfield.TextInputLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        app:passwordToggleEnabled="true">

                        <com.google.android.material.textfield.TextInputEditText
                            android:id="@+id/input_confirm_password"
                            android:layout_width="match_parent"
                            android:layout_height="40dp"
                            android:layout_margin="10dp"
                            android:background="@null"
                            android:hint="@string/confirm_password"
                            android:imeOptions="actionDone"
                            android:inputType="textPassword"
                            android:textSize="18sp" />

                    </com.google.android.material.textfield.TextInputLayout>


                </LinearLayout>

            </androidx.cardview.widget.CardView>

            <Button
                android:id="@+id/button_register"
                android:layout_width="200dp"
                android:layout_height="40dp"
                android:layout_gravity="center"
                android:layout_marginLeft="25dp"
                android:layout_marginRight="25dp"
                android:background="@drawable/border"
                android:text="@string/register"
                android:textAllCaps="false"
                android:textColor="#FFFFFF"
                android:textSize="18sp" />

        </LinearLayout>
    </ScrollView>

</LinearLayout>