<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorBackground"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <androidx.appcompat.widget.Toolbar
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/colorPrimary">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center_vertical"
                android:orientation="horizontal"
                tools:ignore="UseCompoundDrawables">

                <ImageView
                    android:id="@+id/image_menu"
                    android:layout_width="32dp"
                    android:layout_height="32dp"
                    android:layout_margin="5dp"
                    android:src="@drawable/ic_menu_black_48dp"
                    android:tint="@color/colorWhite"
                    tools:ignore="ContentDescription" />

                <TextView
                    android:id="@+id/text_toolbar_title"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="5dp"
                    android:layout_marginRight="5dp"
                    android:text="@string/Career_Choice"
                    android:textColor="@color/colorWhite"
                    android:textSize="22sp"
                    android:textStyle="bold"
                    tools:ignore="HardcodedText" />

            </LinearLayout>

        </androidx.appcompat.widget.Toolbar>
    </LinearLayout>


    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">


        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">


            <ImageView
                android:id="@+id/image_haedar"
                android:layout_width="match_parent"
                android:layout_height="200dp"
                android:contentDescription="@string/app_name"
                android:scaleType="centerInside"
                android:scaleX="1.4"
                android:src="@drawable/graduation"
                app:layout_constraintTop_toTopOf="parent">

            </ImageView>

            <View
                android:id="@+id/view"
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:background="#90000000"
                app:layout_constraintBottom_toBottomOf="@+id/image_haedar"
                app:layout_constraintTop_toTopOf="parent"></View>

            <!--   <TextView
                   android:id=""
                   android:layout_width="match_parent"
                   android:layout_height="wrap_content"
                   android:text="@string/Career_Choice"
                   android:textSize="25dp"
                   android:textStyle="bold"
                   android:textColor="@color/white"
                   android:layout_marginTop="100dp"
                   android:layout_marginLeft="50dp"
                   app:layout_constraintTop_toTopOf="parent">

               </TextView>-->

            <!--  <ImageView
                  android:id="@+id/image_menu"
                  android:layout_width="35dp"
                  android:layout_height="35dp"
                  android:layout_marginTop="16dp"
                  android:layout_marginEnd="18dp"
                  android:layout_marginRight="18dp"
                  android:background="@drawable/menu_background"
                  android:contentDescription="@string/app_name"
                  android:src="@drawable/ic_menu_black_48dp"
                  app:layout_constraintEnd_toEndOf="parent"
                  app:layout_constraintTop_toTopOf="parent"></ImageView>-->

            <View
                android:id="@+id/view_supoter"
                android:layout_width="1dp"
                android:layout_height="1dp"
                android:layout_marginBottom="50dp"
                app:layout_constraintBottom_toBottomOf="@id/image_haedar"
                app:layout_constraintStart_toStartOf="parent" />

            <androidx.cardview.widget.CardView
                android:id="@+id/card_viewfield"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="25dp"
                android:layout_marginLeft="25dp"
                android:layout_marginEnd="10dp"
                android:layout_marginRight="10dp"
                app:cardBackgroundColor="@color/withe"
                app:cardCornerRadius="8dp"
                app:layout_constraintEnd_toStartOf="@id/card_viewcolleg"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/view_supoter">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:orientation="vertical"
                    android:padding="15dp">

                    <ImageView
                        android:layout_width="80dp"
                        android:layout_height="80dp"
                        android:contentDescription="@string/app_name"
                        android:src="@drawable/list1" />

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="10dp"
                        android:gravity="center"
                        android:text="@string/Fields"
                        android:textColor="@color/colorPrimaryText"
                        android:textSize="16dp"
                        android:textStyle="bold" />

                </LinearLayout>

            </androidx.cardview.widget.CardView>


            <androidx.cardview.widget.CardView
                android:id="@+id/card_viewcolleg"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="10dp"
                android:layout_marginLeft="10dp"
                android:layout_marginEnd="25dp"
                android:layout_marginRight="25dp"
                app:cardBackgroundColor="@color/withe"
                app:cardCornerRadius="8dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toEndOf="@+id/card_viewfield"
                app:layout_constraintTop_toBottomOf="@+id/view_supoter">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:orientation="vertical"
                    android:padding="15dp">

                    <ImageView
                        android:layout_width="80dp"
                        android:layout_height="80dp"
                        android:contentDescription="@string/app_name"
                        android:src="@drawable/collegses" />

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="10dp"
                        android:gravity="center"
                        android:text="@string/Colleges"
                        android:textColor="@color/colorPrimaryText"
                        android:textSize="16dp"
                        android:textStyle="bold" />

                </LinearLayout>

            </androidx.cardview.widget.CardView>

            <androidx.cardview.widget.CardView
                android:id="@+id/card_viewfevorite"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="25dp"
                android:layout_marginLeft="25dp"
                android:layout_marginTop="25dp"
                android:layout_marginEnd="10dp"
                android:layout_marginRight="10dp"
                app:cardBackgroundColor="@color/withe"
                app:cardCornerRadius="8dp"
                app:layout_constraintEnd_toStartOf="@id/card_viewlogout"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/card_viewfield">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:orientation="vertical"
                    android:padding="15dp">

                    <ImageView
                        android:layout_width="80dp"
                        android:layout_height="80dp"
                        android:contentDescription="@string/app_name"
                        android:src="@drawable/star" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:gravity="center"
                        android:text="@string/favorite"
                        android:layout_marginTop="10dp"
                        android:textColor="@color/colorPrimaryText"
                        android:textSize="16dp"
                        android:textStyle="bold" />

                </LinearLayout>

            </androidx.cardview.widget.CardView>
            <androidx.cardview.widget.CardView
                android:id="@+id/card_viewlogout"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="10dp"
                android:layout_marginLeft="10dp"
                android:layout_marginTop="25dp"
                android:layout_marginEnd="25dp"
                android:layout_marginRight="25dp"
                android:layout_marginBottom="25dp"
                app:cardBackgroundColor="@color/withe"
                app:cardCornerRadius="8dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toEndOf="@+id/card_viewfevorite"
                app:layout_constraintTop_toBottomOf="@+id/card_viewcolleg">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:orientation="vertical"
                    android:padding="15dp">

                    <ImageView
                        android:layout_width="80dp"
                        android:layout_height="80dp"
                        android:contentDescription="@string/app_name"
                        android:src="@drawable/logout"
                        android:tint="@color/red" />

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="10dp"
                        android:gravity="center"
                        android:text="@string/Colleges"
                        android:textColor="@color/colorPrimaryText"
                        android:textSize="16dp"
                        android:textStyle="bold" />

                </LinearLayout>

            </androidx.cardview.widget.CardView>


        </androidx.constraintlayout.widget.ConstraintLayout>
    </ScrollView>

</LinearLayout>